# cplib

./: .gitignore  Cargo.toml  README.md
benches/: fenwick.rs  gcd.rs  lib.rs  sieve.rs
src/: algebra.rs  ds.rs  io.rs  lib.rs
src/algebra/: add.rs  algebra.rs  bit.rs  cmp.rs  mod.rs
src/core/: binary_search.rs  div_block.rs  index_map.rs  internal_macros.rs  mod.rs  modular.rs  next_perm.rs  num.rs  rng.rs  sub_mask.rs
src/core/binary_search/: tests.rs
src/core/iter/: enhance.rs  mod.rs
src/core/num/: float.rs  identities.rs  integer.rs  mod.rs  modulo.rs  number.rs  sign.rs
src/core/sub_mask/: tests.rs
src/ds/: bit_vec.rs  dsu.rs  dsu_roll_back.rs  fenwick.rs  fenwick2d.rs  im_vec.rs  mod.rs  sparse_table.rs
src/ds/dsu/: basic.rs  mod.rs  persistent.rs  roll_back.rs
src/ds/fenwick/: mod.rs  range.rs  tests.rs  tree.rs
src/ds/im_vec/: tests.rs
src/ds/seg/: lazy.rs  mod.rs  tree.rs
src/ds/treap/: lazy.rs  mod.rs  node.rs  persistent.rs  pnode.rs  tests.rs
src/io/: tests.rs
src/math/: comb.rs  div_block.rs  divide.rs  garner.rs  gcd.rs  mod.rs  modulo.rs  prefix_boost.rs  sieve.rs  subset.rs
src/math/comb/: comb_st.rs  mod.rs  table.rs  tests.rs
src/math/gcd/: tests.rs
src/math/modulo/: tests.rs
src/math/polynomial/: fwht.rs  mod.rs  ntt.rs  tests.rs
src/math/prefix_boost/: dirichlet.rs  mod.rs  prime_pos.rs  tests.rs
src/math/sieve/: tests.rs
src/prelude/: add.rs  algebra.rs  bit.rs  cmp.rs  mod.rs  rng.rs
src/prelude/binary_search/: tests.rs
src/string/: kmp.rs  manacher.rs  mod.rs  suffix_array.rs  z_fn.rs
(+6 files in other folders)
