[package]
name = "cplib"
version = "0.1.0"
authors = ["Zhaopeng Yan <yan-zp@foxmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
criterion = "0.3"
[[bench]]
name = "fenwick"
harness = false