[package]
name = "cplib"
version = "0.1.0"
authors = ["Zhaopeng Yan <yan-zp@foxmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# test/bench only
[dev-dependencies]

# cargo +nightly bench --bench cpbenches
[[bench]]
name = "cpbenches"
path = "benches/lib.rs"
test = true